--- a/index.html
+++ b/index.html
@@ -19,9 +19,41 @@
          <i class="fas fa-ellipsis-v"></i>
       </div>
    </header>
+   
    <!-- Video Player -->
-   <section class="player"></section>
-   <section class="info"></section>
+   <section class="player">
+      <video controls autoplay src="video/Coffee.mp4"></video>
+   </section>
+
+<!-- Video Info -->
+   <section class="info">
+      <div class="metadata">
+         <ul class="hashtags">
+            <li>#Coffee</li>
+            <li>#Beans</li>
+            <li>#Roasting</li>
+         </ul>
+         <div class="titleAndButton">
+            <span class="title">
+               I need a cup coffee every morning.
+            </span>
+            <button class="moreBtn">
+               <i class="fas fa-caret-down"></i>
+            </button>
+         </div>
+         <div class="views">
+            <span class="views">1M views 1 month ago</span>
+         </div>
+      </div>
+      <div class="actions">
+         <li><button><i class="fas fa-thumbs-up"><span>1k</span></i></button></li>
+         <li><button><i class="fas fa-thumbs-down"><span>0</span></i></button></li>
+         <li><button><i class="fas fa-share"><span>Share</span></i></button></li>
+         <li><button><i class="fas fa-plus"><span>Save</span></i></button></li>
+         <li><button><i class="fab fa-font-awesome-flag"><span>Report</span></i></button></li>
+      </div>
+      <div class="channel"></div>
+   </section>
    <section class="upNext"></section>
 </body>
 </html>
