--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <!-- Video Info -->
    <section class="info">
+      <!-- Metadata -->
       <div class="metadata">
          <ul class="hashtags">
             <li>#Coffee</li>
@@ -45,6 +46,7 @@
             <span class="views">1M views 1 month ago</span>
          </div>
       </div>
+      <!-- Actions -->
       <div class="actions">
          <li><button><i class="fas fa-thumbs-up"><span>1k</span></i></button></li>
          <li><button><i class="fas fa-thumbs-down"><span>0</span></i></button></li>
@@ -52,8 +54,49 @@
          <li><button><i class="fas fa-plus"><span>Save</span></i></button></li>
          <li><button><i class="fab fa-font-awesome-flag"><span>Report</span></i></button></li>
       </div>
-      <div class="channel"></div>
+      <!-- Channel Description -->
+      <div class="channel">
+         <div class="metadata">
+            <img src="img/TennisPaul.jpg" alt="avatar">
+            <div class="info">
+               <span class="name">Paultube</span>
+               <span class="subscribers">1M subscribers</span>
+            </div>
+         </div>
+         <button class="subscribe">subscribe</button>
+      </div>
    </section>
-   <section class="upNext"></section>
+   <section class="upNext">
+      <span class="title">Up next</span>
+      <ul>
+         <li class="item">
+            <img src="img/tennis.jpg" alt="tennis">
+            <div class="info">
+               <span class="title">How to play tennis?</span>
+               <span class="name">Tennis Paul</span>
+               <span class="views">1M</span>
+            </div>
+            <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+         </li>
+         <li class="item">
+            <img src="img/golf.jpg" alt="golf">
+            <div class="info">
+               <span class="title">How to play golf?</span>
+               <span class="name">Golf Paul</span>
+               <span class="views">1M</span>
+            </div>
+            <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+         </li>
+         <li class="item">
+            <img src="img/wine.jpg" alt="wine">
+            <div class="info">
+               <span class="title">How to drink wine?</span>
+               <span class="name">Wine Paul</span>
+               <span class="views">1M</span>
+            </div>
+            <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
+         </li>
+      </ul>
+   </section>
 </body>
 </html>
