--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Youtube_mobile ver.</title>
    <script src="https://kit.fontawesome.com/42b07525f6.js" crossorigin="anonymous"></script>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
+   <script src="main.js" defer></script>
 </head>
 <body>
    <!-- Header -->
