--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
          </ul>
          <div class="titleAndButton">
             <span class="title">
-               I need a cup coffee every morning.
+               I need a cup coffee every morning. I prefer to drink espresso than americano. I worked in a coffee shop as a manager few years ago for 2 years. When I went to Rome I had a cup of espresso at the most popular place, the taste was so amazing.
             </span>
             <button class="moreBtn">
                <i class="fas fa-caret-down"></i>
             </button>
          </div>
-         <div class="views">
-            <span class="views">1M views 1 month ago</span>
-         </div>
+         <span class="views">1M views 1 month ago</span>
       </div>
       <!-- Actions -->
       <div class="actions">
