--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
          <span class="views">1M views 1 month ago</span>
       </div>
       <!-- Actions -->
-      <div class="actions">
-         <li><button><i class="fas fa-thumbs-up"><span>1k</span></i></button></li>
-         <li><button><i class="fas fa-thumbs-down"><span>0</span></i></button></li>
-         <li><button><i class="fas fa-share"><span>Share</span></i></button></li>
-         <li><button><i class="fas fa-plus"><span>Save</span></i></button></li>
-         <li><button><i class="fab fa-font-awesome-flag"><span>Report</span></i></button></li>
-      </div>
+      <ul class="actions">
+         <li><button><i class="active fas fa-thumbs-up"></i><span>1k</span></button></li>
+         <li><button><i class="fas fa-thumbs-down"></i><span>0</span></button></li>
+         <li><button><i class="fas fa-share"></i><span>Share</span></button></li>
+         <li><button><i class="fas fa-plus"></i><span>Save</span></button></li>
+         <li><button><i class="fab fa-font-awesome-flag"></i><span>Report</span></button></li>
+      </ul>
       <!-- Channel Description -->
       <div class="channel">
          <div class="metadata">
