--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <video controls autoplay src="video/Coffee.mp4"></video>
    </section>
 
-<!-- Video Info -->
+<div class="infoAndUpNext">
+   <!-- Video Info -->
    <section class="info">
       <!-- Metadata -->
       <div class="metadata">
@@ -69,11 +70,12 @@
          <button class="subscribe">subscribe</button>
       </div>
    </section>
+   <!-- up next -->
    <section class="upNext">
       <span class="title">Up next</span>
       <ul>
          <li class="item">
-            <img src="img/tennis.jpg" alt="tennis">
+            <div class="img"><img src="img/tennis.jpg" alt="tennis"></div>
             <div class="info">
                <span class="title">How to play tennis?</span>
                <span class="name">Tennis Paul</span>
@@ -82,7 +84,7 @@
             <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
          </li>
          <li class="item">
-            <img src="img/golf.jpg" alt="golf">
+            <div class="img"><img src="img/golf.jpg" alt="golf"></div>
             <div class="info">
                <span class="title">How to play golf?</span>
                <span class="name">Golf Paul</span>
@@ -91,7 +93,7 @@
             <button class="moreBtn"><i class="fas fa-ellipsis-v"></i></button>
          </li>
          <li class="item">
-            <img src="img/wine.jpg" alt="wine">
+            <div class="img"><img src="img/wine.jpg" alt="wine"></div>
             <div class="info">
                <span class="title">How to drink wine?</span>
                <span class="name">Wine Paul</span>
@@ -101,5 +103,6 @@
          </li>
       </ul>
    </section>
+</div>
 </body>
 </html>
