--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li>#Roasting</li>
          </ul>
          <div class="titleAndButton">
-            <span class="title">
+            <span class="title clamp">
                I need a cup coffee every morning. I prefer to drink espresso than americano. I worked in a coffee shop as a manager few years ago for 2 years. When I went to Rome I had a cup of espresso at the most popular place, the taste was so amazing.
             </span>
             <button class="moreBtn">
